# ftprelay

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
ftprelay/: __init__.py  relay.py
